--- a/index.html
+++ b/index.html
@@ -1,1 +1,218 @@
-haii
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Start Title -->
+    <title>Belajar koding dari dasar - Petani Koding - Beranda</title>
+    <!-- Start Title -->
+
+    <!-- Start Description -->
+    <meta name="description" content="Petani Koding menawarkan jasa belajar koding dari dasar">
+    <!-- End Description -->
+
+    <!-- Start CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- End CSS -->
+</head>
+<body>
+    <!-- Start Logo -->
+    <div class="container logo">
+        <a href="index.html" title=" logo petani koding">
+            <img src="image/logo-petani-koding.jpg" alt="logo petani koding" width="200">
+        </a>
+    </div>
+    <!-- End Logo -->
+
+    <!-- Start Menu Primer -->
+    <div class="container menu-primer">
+        <ul>
+            <li>
+                <a href="index.html" title="Beranda" class="active">Beranda</a>
+            </li>
+            <li>
+                <a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+            </li>
+            <li>
+                <a href="layanan.html" title="Layanan">Layanan</a>
+            </li>
+            <li>
+                <a href="artikel.html" title="Artikel">Artikel</a>
+            </li>
+            <li>
+                <a href="pembayaran.html" title="Cara Pembayaran">Cara Pembayaran</a>
+            </li>
+            <li>
+                <a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+            </li>
+            <li>
+                <a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+            </li>
+        </ul>
+    </div>
+    <!-- End Menu Primer -->
+
+    <!-- Start Jumbotron -->
+    <div class="container jumbotron">
+        <h1>Selamat Datang di Petani Koding</h1>
+        <h3>Petani Koding menyediakan layanan paket pembelajaran koding dari dasar</h3>
+    </div>
+    <!-- End Jumbotron -->
+
+    <!-- Start Promo  & Layanan -->
+    <div class="container">
+        <!-- Start Promo -->
+        <div class="main-home-one">
+            <div class="box-heading">
+                <h4>Promo</h4>
+            </div>
+            <div class="box-isi">
+                <ul>
+                    <li>[Bulan Ini] Dapatkan Paket belajar bahasa pemrogramanan Python dengan harga khusus! </li>
+                    <li>[Tahun Ini] Gratis 10 paket pembelajaran C++ intensif untuk 10 pendaftar pertama selama promo berlangsung</li>
+                </ul>
+            </div>   
+        </div>
+        <!-- End Promo -->
+
+        <!-- Start Layanan -->
+        <div class="main-home-two">
+            <div class="box-heading">
+                <h4>Layanan</h4>
+            </div>
+            <div class="box-isi">
+                <ul>
+                    <li>
+                        <a href="layanan.html" title="C++">C++</a>
+                    </li>
+                    <li>
+                        <a href="layanan.html" title="Python">Python</a>
+                    </li>
+                    <li>
+                        <a href="layanan.html" title="Java Script">Java Script</a>
+                    </li>
+                    <li>
+                        <a href="layanan.html" title="HTML & CSS">HTML & CSS</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- End Layanan -->
+    </div>
+    <!-- End Promo  & Layanan -->
+
+    <!-- Start Artikel & Testimonial -->
+    <div class="container">
+        <!-- Start Artikel -->
+        <div class="main-home-one">
+            <div class="box-heading">
+                <h4>Artikel</h4>
+            </div>
+            <div class="box-isi">
+                <ol>
+                    <li>
+                        <a href="" title="Cara mudah belajar C++">Cara mudah belajar C++</a>
+                    </li>
+                    <li>
+                        <a href="" title="Kiat menjadi programmer">Kiat menjadi programmer</a>
+                    </li>
+                    <li>
+                        <a href="" title="Tips membuat program yg bagus">Tips membuat program yg bagus</a>
+                    </li>
+                </ol>
+            </div>
+        </div>
+        <!-- End Artikel -->
+
+        <!-- Start Testimonial -->
+        <div class="main-home-two">
+            <div class="box-heading">
+                <h4>Testimonial</h4>
+            </div>
+            <div class="box-isi">
+                <blockquote class="testimonial">
+                    <p>
+                        <em>Awalnya saya gak bisa bikin program sendiri, setelah saya mengikuti program dari Petani Koding, saya sudah mahir. Mantap Jiwa!!</em>
+                    </p>
+                    <cite>-- Rangga</cite>
+                </blockquote>
+            </div>
+        </div>
+        <!-- End Testimonial -->
+    </div>
+    <!-- End artikel & Testimonal -->
+
+    <!-- Start Menu Sekunder -->
+    <div class="container-full menu-sekunder">
+        <div class="container">
+
+            <!-- Start Petani Koding -->
+            <div class="menu-sekunder-one">
+                <h4>Petani Koding</h4>
+                <p>Petani Koding menyediakan layanan <br> paket pembelajaran koding dari dasar</p>
+                <p>Email: <a href="mailto:rezkygaul30@gmail.com" title="rezkygaul30@gmail.com">rezkygaul30@gmail.com</a></p>
+                <p>WA: <a href="telp:+62-822-883-654-75" title="+62-822-883-654-75">+62-822-883-654-75</a></p>
+            </div>
+            <!-- End Petani Koding -->
+
+            <!-- Start Menu -->
+            <div class="menu-sekunder-two">
+                <h4>Menu</h4>
+                <ul>
+                    <li>
+                        <a href="index.html" title="Beranda">Beranda</a>
+                    </li>
+                    <li>
+                        <a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+                    </li>
+                    <li>
+                        <a href="layanan.html" title="Layanan">Layanan</a>
+                    </li>
+                    <li>
+                        <a href="artikel.html" title="Artikel">Artikel</a>
+                    </li>
+                    <li>
+                        <a href="pembayaran.html" title="Cara Pembayaran">Cara Pembayaran</a>
+                    </li>
+                    <li>
+                        <a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+                    </li>
+                    <li>
+                        <a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- End Menu -->
+
+            <!-- Start Media Sosial -->
+            <div class="menu-sekunder-three">
+                <h4>Media sosial</h4>
+                <ul>
+                    <li><a href="https://facebook.com/" title="Facebook - Petani Koding" >
+                            <img src="image/logo-facebook.png" alt="Logo Facebook" width="50">
+                        </a>
+                    </li>
+                    <li><a href="https://instagram.com/" title="Instagram - Petani Koding" >
+                        <img src="image/logo-instagram.png" alt="Logo Instagram" width="50">
+                        </a>
+                    </li>
+                    <li><a href="https://twitter.com/" title="Twitter - Petani Koding">
+                        <img src="image/logo-twitter.jpg" alt="Logo Twitter" width="50">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- End Media Sosial -->
+        </div>
+    </div>
+        <!-- End Menu Sekunder -->
+
+        <!-- Start Copyright -->
+
+        <div class="container copyright">
+            <p>Copyright & copy : 2019 - Petani Koding</p>
+        </div>
+    <!-- End Copyright -->
+</body>
+</html>
