--- a/kontak.html
+++ b/kontak.html
@@ -79,7 +79,7 @@
                 <h2>Form Kontak Petani Koding</h2>
                 <p>Anda dapat memesan dan konfirmasi melalui Form di bawah ini:</p>
 
-                <form action="" class="contact-form">
+                <form method="POST" action="https://formspree.io/rezkygaul30@gmail.com">
                     <div>
                         <label for="nama">Nama Lengkap</label><br>
                         <input type="text" placeholder="Nama Lengkap" size="59" name="nama" id="nama">
@@ -157,15 +157,15 @@
                     <h4>Media sosial</h4>
                     <ul>
                         <li><a href="https://facebook.com/" title="Facebook - Petani Koding" >
-                                <img src="image/logo-facebook.png" alt="Logo Facebook" width="50">
+                                <img src="image/logo-facebook.png" alt="Logo Facebook" width="40">
                             </a>
                         </li>
                         <li><a href="https://instagram.com/" title="Instagram - Petani Koding" >
-                            <img src="image/logo-instagram.png" alt="Logo Instagram" width="50">
+                            <img src="image/logo-instagram.png" alt="Logo Instagram" width="40">
                             </a>
                         </li>
                         <li><a href="https://twitter.com/" title="Twitter - Petani Koding">
-                            <img src="image/logo-twitter.jpg" alt="Logo Twitter" width="50">
+                            <img src="image/logo-twitter.jpg" alt="Logo Twitter" width="40">
                             </a>
                         </li>
                     </ul>
