--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <!-- Start CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- End CSS -->
+
+    <!-- Start JS -->
+    <script src="js/function.js"></script>
+    <!-- End JS -->
 </head>
 <body>
     <!-- Start Logo -->
@@ -52,6 +56,32 @@
         </ul>
     </div>
     <!-- End Menu Primer -->
+
+    <!-- Start Effect -->
+    <div class="container">
+        <figure class="snip1193">
+            <img src="image/belajar-coding-online.jpg" alt="sample31"/>
+        <figcaption>
+            <h4></h4>
+            <a href="#" class="bottom-left"><i class="ion-ios-chatboxes-outline"></i></a><a href="#" class="bottom-right"><i class="ion-ios-telephone-outline"></i></a>
+        </figcaption>
+        </figure>
+        <figure class="snip1193 hover">
+            <img src="image/belajar-coding.jpeg" alt="sample68"/>
+        <figcaption>
+            <h4></h4>
+            <a href="#" class="bottom-left"><i class="ion-ios-chatboxes-outline"></i></a><a href="#" class="bottom-right"><i class="ion-ios-telephone-outline"></i></a>
+        </figcaption>
+        </figure>
+        <figure class="snip1193">
+            <img src="image/belajar-coding-online.jpg" alt="sample69"/>
+        <figcaption>
+            <h4></h4>
+            <a href="#" class="bottom-left"><i class="ion-ios-chatboxes-outline"></i></a><a href="#" class="bottom-right"><i class="ion-ios-telephone-outline"></i></a>
+        </figcaption>
+        </figure>
+    </div>
+    <!-- End Effect -->
 
     <!-- Start Jumbotron -->
     <div class="container jumbotron">
@@ -102,7 +132,7 @@
     </div>
     <!-- End Promo  & Layanan -->
 
-    <!-- Start Artikel & Testimonial -->
+    <!-- Start Artikel & Profil -->
     <div class="container">
         <!-- Start Artikel -->
         <div class="main-home-one">
@@ -125,23 +155,55 @@
         </div>
         <!-- End Artikel -->
 
-        <!-- Start Testimonial -->
+        <!-- Start Profil -->
         <div class="main-home-two">
             <div class="box-heading">
-                <h4>Testimonial</h4>
+                <h4>Profil</h4>
             </div>
             <div class="box-isi">
                 <blockquote class="testimonial">
                     <p>
-                        <em>Awalnya saya gak bisa bikin program sendiri, setelah saya mengikuti program dari Petani Koding, saya sudah mahir. Mantap Jiwa!!</em>
+                        <em>Nama : M. Rezky Pratama
+                            <br><br>
+                            I Can, You Can, We Can
+                        </em>
                     </p>
-                    <cite>-- Rangga</cite>
                 </blockquote>
             </div>
         </div>
-        <!-- End Testimonial -->
+        <!-- End Profil -->
     </div>
-    <!-- End artikel & Testimonal -->
+    <!-- End Artikel & Profil -->
+
+    <!-- Start -->
+    <figure class="snip1139">
+        <blockquote>Awalnya saya tidak mengerti tentang coding. tapi setelah saya mengikuti pembelajaran koding dari Petani Koding, saya bisa membuat website sendiri. Mantap Jiwa!!!
+          <div class="arrow"></div>
+        </blockquote>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample3.jpg" alt="sample3"/>
+        <div class="author">
+          <h5>Maya Kumalasari <span>- LittleThemes</span></h5>
+        </div>
+      </figure>
+      <figure class="snip1139 hover">
+        <blockquote>Untuk para pemula yg ingin memahami coding dari dasar sangat recomended belajar dari Petani Koding
+          <div class="arrow"></div>
+        </blockquote>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample47"/>
+        <div class="author">
+          <h5>Ryan Djaenudin<span>- LittleThemes</span></h5>
+        </div>
+      </figure>
+      <figure class="snip1139">
+        <blockquote>Semua materi disampaikan secara detail dan terstruktur, sehingga mudah dipahami oleh kami semua.
+          <div class="arrow"></div>
+        </blockquote>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample17.jpg" alt="sample17"/>
+        <div class="author">
+          <h5>Elena<span>- LittleThemes</span></h5>
+        </div>
+      </figure>
+    <!-- End -->
 
     <!-- Start Menu Sekunder -->
     <div class="container-full menu-sekunder">
@@ -190,15 +252,17 @@
                 <h4>Media sosial</h4>
                 <ul>
                     <li><a href="https://facebook.com/" title="Facebook - Petani Koding" >
-                            <img src="image/logo-facebook.png" alt="Logo Facebook" width="50">
+                            <img src="image/logo-facebook.png" alt="Logo Facebook" width="40">
                         </a>
                     </li>
+                    <br>
                     <li><a href="https://instagram.com/" title="Instagram - Petani Koding" >
-                        <img src="image/logo-instagram.png" alt="Logo Instagram" width="50">
+                        <img src="image/logo-instagram.png" alt="Logo Instagram" width="40">
                         </a>
                     </li>
+                    <br>
                     <li><a href="https://twitter.com/" title="Twitter - Petani Koding">
-                        <img src="image/logo-twitter.jpg" alt="Logo Twitter" width="50">
+                        <img src="image/logo-twitter.jpg" alt="Logo Twitter" width="40">
                         </a>
                     </li>
                 </ul>
@@ -211,7 +275,7 @@
         <!-- Start Copyright -->
 
         <div class="container copyright">
-            <p>Copyright & copy : 2019 - Petani Koding</p>
+            <p>Copyright : 2019 - Petani Koding</p>
         </div>
     <!-- End Copyright -->
 </body>
