--- a/kontak.html
+++ b/kontak.html
@@ -177,7 +177,7 @@
 
     <!-- Start Copyright -->
     <div class="container">
-        <p>Copyright & copy : 2019 - Petani Koding</p>
+        <p>Copyright : 2019 - Petani Koding</p>
     </div>
     <!-- End Copyright -->
 </body>
