--- a/pertanyaan.html
+++ b/pertanyaan.html
@@ -142,15 +142,15 @@
                     <h4>Media sosial</h4>
                     <ul>
                         <li><a href="https://facebook.com/" title="Facebook - Petani Koding" >
-                                <img src="image/logo-facebook.png" alt="Logo Facebook" width="50">
+                                <img src="image/logo-facebook.png" alt="Logo Facebook" width="40">
                             </a>
                         </li>
                         <li><a href="https://instagram.com/" title="Instagram - Petani Koding" >
-                            <img src="image/logo-instagram.png" alt="Logo Instagram" width="50">
+                            <img src="image/logo-instagram.png" alt="Logo Instagram" width="40">
                             </a>
                         </li>
                         <li><a href="https://twitter.com/" title="Twitter - Petani Koding">
-                            <img src="image/logo-twitter.jpg" alt="Logo Twitter" width="50">
+                            <img src="image/logo-twitter.jpg" alt="Logo Twitter" width="40">
                             </a>
                         </li>
                     </ul>
@@ -162,7 +162,7 @@
 
     <!-- Start Copyright -->
     <div class="container">
-        <p>Copyright & copy : 2019 - Petani Koding</p>
+        <p>Copyright : 2019 - Petani Koding</p>
     </div>
     <!-- End Copyright -->
 </body>
